--- a/config.json
+++ b/config.json
@@ -1,25 +1,25 @@
 {
     "port": 3000,
-    "foodMass": 1,
+    "foodMass": 2,
     "fireFood": 20,
     "limitSplit": 16,
     "defaultPlayerMass": 10,
-	"virus": {
-    "fill": "#33ff33",
-  	"stroke": "#19D119",
-		"strokeWidth": 20,
-		"defaultMass": {
+    "virus": {
+        "fill": "#ff3333",
+        "stroke": "#000000",
+        "strokeWidth": 20,
+        "defaultMass": {
             "from": 100,
             "to": 150
         },
-		"splitMass": 180
-	},
-    "gameWidth": 5000,
-    "gameHeight": 5000,
+        "splitMass": 180
+    },
+    "gameWidth": 2000,
+    "gameHeight": 2000,
     "adminPass": "DEFAULT",
     "gameMass": 20000,
-    "maxFood": 1000,
-    "maxVirus": 50,
+    "maxFood": 400,
+    "maxVirus": 10,
     "slowBase": 4.5,
     "logChat": 0,
     "networkUpdateFactor": 40,
