--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-todo": "^4.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
+    "jquery": "^2.2.0",
     "jshint": "^2.9.2",
     "mocha": "^2.5.3",
     "node-libs-browser": "^1.0.0",
