Update paradrop.yaml to use new schema.

--- a/paradrop.yaml
+++ b/paradrop.yaml
@@ -1,4 +1,12 @@
+name: cells
+description: A multiplayer action game.
+services:
+  main:
+    command: npm start
+    image: node
+    source: .
+    type: light
 version: 1
-type: light
-use: node
-command: npm start
+web:
+  port: 3000
+  service: main
